Added additional metadata to diagram file and backend database
